--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8">
 <title>小何祝各位新年快乐!</title>
-
 <style>
 html,body{
 	margin:0px;
@@ -12,10 +11,14 @@ html,body{
 	overflow:hidden;
 	background:#000;
 }
+audio{
+             display: none;
+         }
 </style>
 
 </head>
 <body>
+
 <canvas id="canvas" style="position:absolute;width:100%;height:100%;z-index:8888"></canvas>
 <canvas style="position:absolute;width:100%;height:100%;z-index:9999" class="canvas" ></canvas>
 <div class="overlay">
@@ -27,6 +30,9 @@ html,body{
       </ul>
     </div>
   </div>
+	<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
+            	src="./超多老虎（杭州大院）,苏一,周楚皓 - 你是人间四月天（抖音合唱版）.mp3">
+	</audio>
 </div>
 <script>
 function initVars(){
