--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>小何祝各位新年快乐!</title>
-<Embed src="./超多老虎（杭州大院）,苏一,周楚皓 - 你是人间四月天（抖音合唱版）.mp3" HIDDEN="TRUE" AUTOSTART="TRUE"></Embed>
+<embed src="./超多老虎（杭州大院）,苏一,周楚皓 - 你是人间四月天（抖音合唱版）.mp3" hidden="true" autostart="true" loop="true">
 <style>
 html,body{
 	margin:0px;
